fix tts container color in dark mode (issue #2189)

--- a/src/renderer/assets/styles/components/readerHeader.scss
+++ b/src/renderer/assets/styles/components/readerHeader.scss
@@ -233,6 +233,7 @@
     padding: 10px;
     border: 1px solid var(--color-verylight-grey-alt);
     gap: 20px;
+    color: var(--color-primary);
 
 
     .react_aria_ComboBox{
